0.1.70: - let sw.rho() and similar sw. functions take a ctd object as a single argument
0.1.69: - modify documentation slightly
	- rename as.CTD() to as.ctd(), to make it consistent with similar functions
	- add read.section()
	- add section.grid(), which only grids in p at the moment
	- add a03 dataset
	- fix SF bug 1833719: warnings from read.ctd()
	- fix Issue 8: read.coastline() not producing data
	- improve ability of trim.ctd() to ignore spurious initial data
	- add "connect.points" option to plot.TS()
	- add "station" item to "ctd" object
	- change as.CTD() to produce sigma.theta instead of sigma
0.1.68: - add coastline.world dataset, and increase resolution of coastline.maritimes
        - plot.TS() no longer rotates the RH margin isopycnal labels (unless told to)
0.1.67: - allow sw.rho() and similar routines take matrices as arguments for S, t, etc
0.1.66: - fix bug in plot.TS() that prevented it from showing some isopycnals if min(S)=0
0.1.65: - switch to using UNESCO formulation for sw potential temperature by default
        - prevent warnings with C90 compiler on some machines
0.1.64: - add read.oce(), a generic function for reading several oceanographic files
        - make read.ctd() understand WOCE-exchange files
        - make read.sealevel() understand comma-separated data from MEDS
        - make plot.sealevel() skip the spectral graphs, if the timeseries has NA values
        - improve aesthetics of plot.ctd()
        - extend plot.sealevel() by adding focus.time argument
        - add ctd.decimate()
        - add oce.as.POSIXlt()
        - add latlon.format(), lat.format(), and lon.format()
        - add as.coastline()
        - add make.section()
        - add summary.section()
        - add plot.section()
        - add data(section)
0.1.63: - add sw.sound.speed()
0.1.62: - add processing.log.append() and related code
        - improve ctd.trim()
0.1.61: - add rudimentary read/summary/plot functions for lobo datasets