@@ -8,7 +8,7 @@ sw.beta <- function(S, t=NULL, p=NULL, is.theta = FALSE)
 	dim <- dim(S)
   	nS <- length(S)
   	nt <- length(t)
-	if (!is.theta) t = oce::sw.theta(S, t, p)
+	if (!is.theta) t = sw.theta(S, t, p)
   	np <- length(p)
   	if (nS != nt)
     	stop("lengths of S and t must agree, but they are ", nS, " and ", nt, ", respectively")
