@@ -6,5 +6,5 @@ sw.sigma.theta <- function(S, t=NULL, p=NULL)
 		S <- S$data$salinity # note: this destroys the ctd object
 	}
   	p.top <- rep(0, length(S))
-  	oce::sw.rho(S, oce::sw.theta(S, t, p), p.top) - 1000
+  	sw.rho(S, sw.theta(S, t, p), p.top) - 1000
 }
